--- a/.gitignore
+++ b/.gitignore
@@ -31,3 +31,22 @@ build/
 
 ### VS Code ###
 .vscode/
+
+# .dockerignore
+.git
+.gitignore
+target/
+*.jar
+*.war
+*.ear
+.hsts
+.idea
+*.iml
+.vscode
+*.log
+*.tmp
+*.swp
+.DS_Store
+.env
+node_modules/
+uploads/
