--- a/.github/workflows/docker-build-push.yml
+++ b/.github/workflows/docker-build-push.yml
@@ -30,8 +30,8 @@ jobs:
           java-version: '17'
           distribution: 'temurin'
 
-      - name: Run tests
-        run: mvn test -B
+#      - name: Run tests
+#        run: mvn test -B
 
       - name: Build with Maven
         run: mvn clean package -DskipTests
